--- a/src/App.css
+++ b/src/App.css
@@ -12,3 +12,69 @@ body{
   height: 100px;
 }
 
+.header{
+  background-color: #3d434b;
+  display: flex;
+  align-items: center;
+  position: sticky;
+  top: 0;
+  z-index: 100;
+}
+
+.e-commerce-logo{
+  width: 100px;
+  margin: 0 20px;
+  margin-top: 18px;
+  object-fit: contain;
+
+}
+
+.header-search{
+  display: flex;
+  flex: 1;
+}
+
+.search-input{
+  height: 12px;
+  padding: 10px;
+  border: none;
+  width: 100%;
+}
+
+.search-icon{
+  padding: 5px;
+  height: 22px;
+  background-color: #f49c3e;
+}
+
+.header-option{
+  display: flex;
+  flex-direction: column;
+  margin-left: 10px;
+  margin-right: 10px;
+}
+
+.header-link{
+  color: white;
+  text-decoration: none;
+}
+
+.header-option1{
+  font-size: 10px;
+}
+
+.header-option2{
+  font-size: 13px;
+  font-weight: 800;
+}
+
+.header-nav{
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.header-basket-items{
+  margin-left: 10px;
+  margin-right: 10px;
+}
+
