--- a/src/App.css
+++ b/src/App.css
@@ -1,15 +1,31 @@
 body{
   margin: 0;
   font-family: 'Times New Roman', Times, serif;
+  text-align: center;
+  background-color: rgb(232, 229, 229);
 }
 
 .product-container{
-  display: grid;
+  display: inline-grid;
+  background: #fff;
+  z-index: 1;
+  margin-right: 10px;
+  margin-left: 10px;
+  place-items: center;
+  
+}
+.product-item{
+  width: 100%;
+  max-height: 200px;
+  margin: 10px;
+  padding: 10px;
+  object-fit: contain;
 }
 
-.product-item{
-  width: 100px;
-  height: 100px;
+.cart-btn{
+  max-width: 100px;
+  
+  
 }
 
 .header{
@@ -26,7 +42,6 @@ body{
   margin: 0 20px;
   margin-top: 18px;
   object-fit: contain;
-
 }
 
 .header-search{
@@ -76,5 +91,70 @@ body{
 .header-basket-items{
   margin-left: 10px;
   margin-right: 10px;
+}
+
+.banner{
+  width: 100%;
+  height: 500px;
+  mask-image: linear-gradient(bottom, rgba(0,0,0,1), rgba(0,0,0,0));
+  z-index: -1;
+  margin-bottom: -150px;
+}
+
+.login{
+  display: grid;
+  place-items: center;
+}
+
+.login-form{
+  border: solid lightgray;
+  width: 300px;
+  height: 200px;
+  text-align: left;
+  display: grid;
+}
+
+.login-btn{
+  background-color: #efa449;
+}
+
+.signup-form{
+  display: grid;
+  place-items: center;
+}
+
+.signup{
+  border: solid lightgray;
+  width: 400px;
+  height: 300px;
+  text-align: left;
+  display: grid;
+}
+
+
+.signup-btn{
+  background-color: rgb(63, 235, 89);
+}
+
+.e-commerce-logo1{
+  width: 200px;
+}
+
+.checkout{
+  display: flex;
+  padding: 20px;
+  background-color: white;
+  height: max-content;
+}
+
+.checkout-title{
+  margin-right: 10px;
+  padding: 10px;
+  border-bottom: 1px solid lightgray;
+}
+
+.check-ad{
+  width: 100%;
+  margin-bottom: 10px;
 }
 
