--- a/src/App.css
+++ b/src/App.css
@@ -10,7 +10,10 @@ body{
   max-width: 80%;
   background: #fff;
   z-index: 1;
-  margin: 10px;
+  margin-right: 10px;
+  margin-left: 10px;
+  margin-top: 10px;
+  margin-bottom: 10px;
   place-items: center;
   
 }
@@ -103,6 +106,38 @@ body{
   margin-bottom: -150px;
 }
 
+.header-menu-div{
+  box-shadow: 0 1px 3px -2px black;
+  padding: 20px;
+}
+
+.header-menu{
+display: flex;
+justify-content: center;
+  list-style: none;
+  gap: 50px;
+  font-size: 20px;
+  font-weight: 500;
+}
+
+
+.header-menu li{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 3px;
+  cursor: pointer;
+}
+
+.header-menu hr{
+  border: none;
+  width: 80%;
+  height: 3px;
+  border-radius: 10px;
+  background-color: rgb(235, 158, 75);
+}
+
 .login{
   display: grid;
   place-items: center;
@@ -158,5 +193,49 @@ body{
 .check-ad{
   width: 100%;
   margin-bottom: 10px;
+}
+
+.product-display{
+  display: flex;
+  margin: 0px 170px;
+  align-items: left;
+}
+
+.product-title2{
+  color: #3d3d3d;
+  font-size: 40px;
+  font-weight: 700;
+}
+
+.stars{
+  align-items: center;
+  margin-top: 13px;
+  gap: 5px;
+  color: #1c1c1c;
+  font-size: 16px;
+}
+
+.product-price2{
+  margin: 40px 0px;
+  gap: 30px;
+  font-size: 24px;
+  font-weight: 700;
+}
+
+.product-btn{
+  padding: 20px 40px;
+  width: 200px;
+  font-size: 16px;
+  font-weight: 600;
+  color: white;
+  background: #FF4141;
+  margin-bottom: 40px;
+  border: none;
+  outline: none;
+  cursor: pointer;
+}
+
+.product-category span{
+  font-weight: 600;
 }
 
