--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,9 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 body{
-  margin: 0;
+  margin: 0px;
   font-family: 'Times New Roman', Times, serif;
   text-align: center;
   background-color: rgb(232, 229, 229);
@@ -77,6 +81,7 @@ body{
 .header-link{
   color: white;
   text-decoration: none;
+  background: transparent;
 }
 
 .header-option1{
@@ -239,3 +244,10 @@ justify-content: center;
   font-weight: 600;
 }
 
+.product-image2{
+  width: 300px;
+}
+
+.product-image3{
+  width: 300px;
+}
